Potato-Leek Soup and Coq au Vin

--- a/main.tex
+++ b/main.tex
@@ -1009,7 +1009,7 @@ Serves 4
 \end{paracol}
 \end{densecard}
 
-\begin{recipe}{Hollandaise Sauce}{\totaltime{10 min}}
+\begin{recipe}{Hollandaise Sauce}{\tag{V}\totaltime{10 min}}
 \begin{ingredients}
 2 egg yolks
 1 tbsp lemon juice
@@ -1028,7 +1028,7 @@ Serves 2-3
 Keep the sauce warm in the double boiler, whisking occasionally, until ready to use.
 \end{recipe}
 
-\begin{recipe}{Simple Pie Crust}{\totaltime{1 h 15 min}}
+\begin{recipe}{Simple Pie Crust}{\tag{V}\totaltime{1 h 15 min}}
 \begin{ingredients}
 150 g flour
 1/4 tsp salt
@@ -1046,7 +1046,7 @@ Makes enough for one 9-inch pie
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Heirloom Tomato Tart}{\preheat{\fahrenheit{375}}\totaltime{1 h 30 min}}
+\begin{denserecipe}{Heirloom Tomato Tart}{\tag{V}\preheat{\fahrenheit{375}}\totaltime{1 h 30 min}}
 \begin{ingredients}
 simple pie crust
 500 g ripe heirloom tomatoes
@@ -1071,7 +1071,7 @@ Serves 4 to 6
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}{Miso-Sesame Vinaigrette}{\preheat{\fahrenheit{350}}\totaltime{10 min}}
+\begin{recipe}{Miso-Sesame Vinaigrette}{\tag{VG}\preheat{\fahrenheit{350}}\totaltime{10 min}}
 \begin{ingredients}
 2 tbsp sesame seeds
 2 cloves garlic, smashed
@@ -1095,7 +1095,7 @@ Makes about 1 1/2 cups of dressing
 Can be stored in refrigerator for 3 weeks.
 \end{recipe}
 
-\begin{recipe}{Lemony Asparagus Soup}{\totaltime{15 min}}
+\begin{recipe}{Lemony Asparagus Soup}{\tag{V}\totaltime{15 min}}
 \begin{ingredients}
 1 bunch asparagus, chopped
 2 shallots, chopped
@@ -1119,7 +1119,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Peaches in Muscat}{\totaltime{2 h}}
+\begin{recipe}{Peaches in Muscat}{\tag{VG}\totaltime{2 h}}
 \begin{ingredients}
 4 ripe peaches
 1/2 cup sweet Muscat
@@ -1135,7 +1135,7 @@ If peaches are hard to peel, loosen skins in boiling water.
 Serve alone or with whipped cream or ice cream.
 \end{recipe}
 
-\begin{recipe}{Braised Peppers and Onions}{\totaltime{40 min}}
+\begin{recipe}{Braised Peppers and Onions}{\tag{VG}\totaltime{40 min}}
 \begin{ingredients}
 2 tbsp oil
 3 large bell peppers
@@ -1155,7 +1155,94 @@ Serves 4--6 as a side
 Lower heat if necessary to prevent browning.
 \end{recipe}
 
-\iffalse % New recipe template
+\begin{recipe}{Potato-Leek Soup}{\tag{V}\totaltime{45 min}}
+\begin{ingredients}
+2 tbsp unsalted butter
+2 large leeks
+1 quart chicken stock
+2 medium russet potatoes
+1 bay leaf
+salt and pepper
+1 cup sour cream
+1/2 tsp nutmeg
+\end{ingredients}
+\nextcolumn
+Serves 6
+\begin{steps}
+    \item Clean and chop leeks and potatoes
+    \item Saute leeks until very soft, 10-15 minutes
+    \item Add stock, potatoes and spices
+    \item Bring to boil and simmer until potatoes are very soft, about 15 minutes
+    \item Discard bay leaf, add cream and nutmeg
+    \item Blend until smooth and adjust for salt
+\end{steps}
+Serve with sliced chives or scallions.
+\end{recipe}
+
+\begin{recipe}{Green Goddess Dressing}{\tag{V}\totaltime{15 min}}
+\begin{ingredients}
+1 cup parsley
+1 cup spinach
+2 tbsp tarragon
+3 tbsp chives
+1 clove garlic
+1~tsp fish sauce
+3 tbsp lemon juice
+4 tsp vinegar
+1/2 cup neutral oil
+1/2 cup mayonnaise
+salt and pepper
+\end{ingredients}
+\nextcolumn
+Makes 1 1/2 cups
+\begin{steps}
+    \item Combine everything before mayonnaise
+    \item Blend until smooth
+    \item Add mayonnaise
+    \item Blend until combined
+    \item Season with salt and pepper
+\end{steps}
+Best when fresh, but will keep a couple of days in refrigerator.
+
+Replace fish sauce with 2 anchovy fillets.
+\end{recipe}
+
+\begin{denserecipe}{Coq au Vin}{\preheat{\fahrenheit{350}}\totaltime{2 h 30 min}}
+\begin{ingredients}
+3 lb chicken dark meat
+2 cups hearty red wine
+1/2 lb frozen pearl onions
+1/4 lb lardons
+1/2 lb mushrooms
+2 carrots, diced
+3 cloves garlic, crushed
+2 sprigs thyme
+1 bay leaf
+1 cup gelatinous broth
+2 tbsp butter, cubed
+3 tbsp parsley, minced
+\end{ingredients}
+\nextcolumn
+\begin{steps}
+    \item Marinate chicken in wine, at least 30 minutes
+    \item Render lardons in dutch oven, set aside
+    \item Dry chicken, brown in rendered fat, season with salt and pepper, set aside
+    \item Brown mushrooms and then carrots
+    \item Add garlic for 1 minute
+    \item Deglaze with wine
+    \item Add lardons, thyme, bay leaves and stock
+    \item Reduce by one third
+    \item Nestle in chicken thighs skin exposed
+    \item Braise uncovered in \fahrenheit{350} for 1 hour
+    \item Whisk in butter and parsley
+\end{steps}
+\end{denserecipe}
+
+% ===========================
+% === New recipe template ===
+% ===========================
+\iffalse
+
 \begin{recipe}{}{\totaltime{}}
 \begin{ingredients}
 
@@ -1166,6 +1253,6 @@ Serves
     \item
 \end{steps}
 \end{recipe}
-\fi
 
+\fi
 \end{document}
