--- a/main.tex
+++ b/main.tex
@@ -1238,6 +1238,30 @@ Replace fish sauce with 2 anchovy fillets.
 \end{steps}
 \end{denserecipe}
 
+\begin{recipe}{Saaristolaisleipä}{\preheat{\celsius{175}}\totaltime{3h 30 min}}
+\begin{ingredients}
+3 tsp instant yeast
+1 1/2 dl beer malts
+1 1/2 dl bran
+1 tsp salt
+2 dl rye flour
+5 dl wheat flour
+5 dl piimä
+1 dl treacle
+1 espresso shot + 2 tbsp treacle
+\end{ingredients}
+\nextcolumn
+Makes 1 large loaf
+\begin{steps}
+    \item Mix all dry ingredients
+    \item Whisk together piimä and treacle
+    \item Heat wet ingredients to \celsius{42 degrees}
+    \item Add dry ingredients into wet ingredients and mix until fully combined
+    \item Rise until doubled, about 90 minutes
+    \item Bake at \celsius{175} for 1 h 30 min, brush with espresso treacle mixture and bake for 30 minutes more
+\end{steps}
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
