--- a/main.tex
+++ b/main.tex
@@ -1243,12 +1243,12 @@ Replace fish sauce with 2 anchovy fillets.
 3 tsp instant yeast
 1 1/2 dl beer malts
 1 1/2 dl bran
-1 tsp salt
+1 1/2 tsp kosher salt
 2 dl rye flour
 5 dl wheat flour
 5 dl piimä
 1 dl treacle
-1 espresso shot + 2 tbsp treacle
+1 espresso shot + 2~tbsp treacle
 \end{ingredients}
 \nextcolumn
 Makes 1 large loaf
