--- a/main.tex
+++ b/main.tex
@@ -1297,6 +1297,58 @@ Makes 1 large loaf
 \end{paracol}
 \end{densecard}
 
+\begin{denserecipe}{French Macaroni Casserole}{\totaltime{30 minutes}}
+\begin{ingredients}
+3 cups mornay sauce
+1 1/2 cups macaroni
+1 tbsp olive oil
+1 large onion
+1 rib celery
+1 small carrot
+3 cloves garlic
+1 lb ground beef
+3 tbsp fresh oregano, parsley and basil
+\mbox{1/2 cup crushed tomatoes}
+2 tbsp grated parmesan
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Cook macaroni
+    \item Saute vegetables in olive oil
+    \item Add meat and season with salt and pepper
+    \item Cook, breaking apart, until no longer red
+    \item Add herbs and tomatoes
+    \item Cook for 5 minutes
+    \item Combine with macaroni and transfer into \mbox{7-by-10} inch baking dish
+    \item Pour hot mornay sauce on top
+    \item Sprinkle parmesan and broil until browned
+\end{steps}
+\end{denserecipe}
+
+\begin{recipe}{Mornay Sauce}{\totaltime{10 min}}
+\begin{ingredients}
+3 tbsp butter
+1/4 cup flour
+2 cups milk
+2 cups shredded \hphantom{split} cheddar
+white pepper
+nutmeg
+cayenne
+\end{ingredients}
+\nextcolumn
+Yields 3 cups
+\begin{steps}
+    \item Melt butter over medium-high heat
+    \item Whisk in flour
+    \item Cook until flour is cooked
+    \item Whisk in cold milk
+    \item Cook, whisking constantly, until thick
+    \item Add cheese and stir until melted
+    \item Add spices to taste and check for salt
+\end{steps}
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
@@ -1304,7 +1356,6 @@ Makes 1 large loaf
 
 \begin{recipe}{}{\totaltime{}}
 \begin{ingredients}
-
 \end{ingredients}
 \nextcolumn
 Serves
