--- a/main.tex
+++ b/main.tex
@@ -1349,6 +1349,29 @@ Yields 3 cups
 \end{steps}
 \end{recipe}
 
+\begin{recipe}{Mediterranean Roast Cauliflower}{\preheat{\fahrenheit{500}}\totaltime{40 min}}
+\begin{ingredients}
+1 cauliflower
+3+3 tbsp olive oil
+salt and pepper
+1 tbsp vinegar
+1 tbsp honey
+2 tbsp capers
+1/4 cup pine nuts, toasted
+1/4 cup raisins
+2 tbsp parsley, minced
+\end{ingredients}
+\nextcolumn
+Serves
+\begin{steps}
+    \item Cut cauliflower into 8 wedges
+    \item Toss cauliflower with oil, salt and pepper
+    \item Roast cauliflower at \fahrenheit{500}, flipping once, about 20 minutes until tender
+    \item Mix remaining ingredients and season with salt and pepper
+    \item Plate cauliflower and spoon on dressing
+\end{steps}
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
