Fix and lamb tagine

--- a/main.tex
+++ b/main.tex
@@ -1362,7 +1362,7 @@ salt and pepper
 2 tbsp parsley, minced
 \end{ingredients}
 \nextcolumn
-Serves
+Serves 4
 \begin{steps}
     \item Cut cauliflower into 8 wedges
     \item Toss cauliflower with oil, salt and pepper
@@ -1371,6 +1371,33 @@ Serves
     \item Plate cauliflower and spoon on dressing
 \end{steps}
 \end{recipe}
+
+\begin{denserecipe}{Lamb Shank Tagine}{\preheat{\fahrenheit{350}}\totaltime{3 h}}
+\begin{ingredients}
+4 lamb shanks
+1 tsp each cumin, cinnamon, coriander, garlic
+1 tbsp each paprika, \mbox{ginger} + pinch cayenne
+2 medium onions, sliced
+1 1/2 tbsp tomato paste
+3 cups gelatinous stock
+24 dates, pitted
+1/2 cup golden raisins
+1/2 cup pomegranate
+cilantro
+\end{ingredients}
+\nextcolumn
+Serves 4 generously
+\begin{steps}
+    \item Season lamb generously with salt, pepper and mixed dry spices, set aside for 1 hour
+    \item Brown lamb over medium heat in dutch oven
+    \item Set lamb aside and lightly brown onions
+    \item Add tomato and 8 finely chopped dates, and cook for 1 minute
+    \item Add lamb and stock and bring to boil
+    \item Braise with lid at \fahrenheit{350} for 2 hours 30 minutes
+    \item Remove lamb, skim fat, add dates and raisins
+    \item Reduce slightly, pour over lamb and garnish with pomegranate and cilantro
+\end{steps}
+\end{denserecipe}
 
 % ===========================
 % === New recipe template ===
