Snap pea salad and poached chicken

--- a/main.tex
+++ b/main.tex
@@ -1399,6 +1399,40 @@ Serves 4 generously
 \end{steps}
 \end{denserecipe}
 
+\begin{recipe}{Snap Pea-Chicken Salad}{\totaltime{40 min}}
+\begin{ingredients}
+1 boneless, skinless chicken breast
+1 lb sugar snap peas
+3 tbsp roasted white sesame seeds
+1/3 cup Miso-Sesame Vinaigrette
+\end{ingredients}
+\nextcolumn
+Serves 2
+\begin{steps}
+    \item Bring chicken and water to cover by 1 inch to boil over medium-high heat, lower heat to gently simmer for 10 minutes, turn off heat and cover for 10 minutes
+    \item Meanwhile, blanch peas for 90 seconds, shock, dry, trim and slice on a diagonal
+    \item Cool chicken in ice water and shred
+    \item Combine chicken, peas and dressing
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Poached Chicken Breast}{\totaltime{1 h 15 min}}
+\begin{ingredients}
+2 l cold water
+15 g salt
+700 g chicken breast, with bone and skin preferably
+\mbox{aromatics, for example} a scallion and a knob of ginger
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Bring water, salt, chicken and aromatics to \celsius{65} over medium-high heat
+    \item Adjust heat to maintain temperature between \celsius{65-70}
+    \item Cook until chicken reaches \celsius{65} in thickest part, about 1 hour
+    \item Strain broth and save for another use
+\end{steps}
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
