--- a/main.tex
+++ b/main.tex
@@ -1421,7 +1421,7 @@ Serves 2
 2 l cold water
 15 g salt
 700 g chicken breast, with bone and skin preferably
-\mbox{aromatics, for example} a scallion and a knob of ginger
+aromatics, such as a scallion and a knob of ginger
 \end{ingredients}
 \nextcolumn
 Serves 4
@@ -1431,6 +1431,102 @@ Serves 4
     \item Cook until chicken reaches \celsius{65} in thickest part, about 1 hour
     \item Strain broth and save for another use
 \end{steps}
+\end{recipe}
+
+\begin{denserecipe}{Big Pot of Beans}{\totaltime{7 h}}
+\begin{ingredients}
+1 lb dried beans
+salt, olive oil
+aromatics, such as garlic, onion, celery, carrot
+herbs, such as thyme, sage, oregano, rosemary, bay leaves
+meat, such as cured sausage, smoked pork, or a Parmesan rind
+fresh herbs, celery leaves, red pepper, scallion, red onion, flaky salt
+\end{ingredients}
+\nextcolumn
+Serves 8
+\begin{steps}
+    \item Pick over, rinse and soak beans in salted water for 4 to 8 hours (optional for black beans, black-eyed beans and lentils)
+    \begin{description}
+        \item[Quick soak:] bring to boil and wait 1 hour
+    \end{description}
+    \item Combine drained beans, salted water to cover by 3 inches, oil, aromatics, herbs and meat
+    \item Simmer, skimming and adding water as necessary, until fully tender, anywhere from 30 minutes to 3 hours
+    \begin{description}
+        \item[Oven method:] cook covered at \fahrenheit{250}/\celsius{120}
+    \end{description}
+    \item Garnish with fresh herbs, alliums and spices
+\end{steps}
+\end{denserecipe}
+
+\begin{recipe}{Pressure Cooker Black Beans}{\totaltime{60 min}}
+\begin{ingredients}
+1 tbsp oil
+2-3 chorizos or other cured sausages, chopped
+1 lb dried black beans
+1 onion, split in half
+6 cloves garlic
+1 orange, split in half
+2 bay leaves
+2 quarts chicken stock
+2 tsp kosher salt
+\end{ingredients}
+\nextcolumn
+Serves 8
+\begin{steps}
+    \item Heat oil in pressure cooker
+    \item Brown sausage
+    \item Add all ingredients
+    \item Cook at high pressure for 40 minutes
+    \item For creamy beans release pressure naturally, or quick-release for firmer beans
+    \item Discard onion, orange and bay leaves
+    \item Season to taste with salt
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Soy Reduction}{\totaltime{2 h}}
+\begin{ingredients}
+3 dl tamari
+3 dl cheap sake
+85 g sugar
+5 g kombu
+15 g dried shiitakes
+10 g bonito flakes
+\end{ingredients}
+\nextcolumn
+\begin{steps}
+    \item Simmer all ingredients for 10 minutes
+    \item Cover and let steep for 1 hour
+    \item Strain into a non-stick skillet
+    \item Reduce to a syrup, until a drop smeared onto a chilled plate holds its shape, about 15 minutes
+    \item Transfer to measuring cup to cool
+    \item Transfer cooled syrup into squeeze bottle
+\end{steps}
+Steep aromatics again for pickling eggs.
+\end{recipe}
+
+\begin{recipe}{Salmon Poke Bowl}{\totaltime{20 min}}
+\begin{ingredients}
+1 lime, zest and juice
+1/2 inch ginger, grated
+2 tbsp Miso-Sesame Vinaigrette
+1/2 apple
+1/4 cucumber
+1 scallion
+1/2 lb sushi salmon
+1 tsp sesame seeds
+salt and pepper
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Mix zest, juice, ginger and vinaigrette
+    \item Peel and dice apple and cucumber
+    \item Thinly slice scallion
+    \item Trim and dice salmon into large cubes
+    \item Combine all ingredients
+    \item Season to taste with salt and pepper
+\end{steps}
+Serve over rice drizzled with Soy Reduction
 \end{recipe}
 
 % ===========================
