--- a/main.tex
+++ b/main.tex
@@ -1529,6 +1529,26 @@ Serves 4
 Serve over rice drizzled with Soy Reduction
 \end{recipe}
 
+\begin{recipe}{Carrot Salad}{\totaltime{15 min}}
+\begin{ingredients}
+1 cup pineapple or orange pieces
+1/2 cup golden raisins
+1/4 cup yogurt or mayonnaise
+1 tbsp orange zest
+salt
+4 cups grated carrots, about 6 medium
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Optionally, soak raisins in hot water for 15 minutes
+    \item Combine everything but carrots
+    \item Season to taste with salt
+    \item Fold in carrots
+\end{steps}
+Ideally refrigerate for 1 hour before serving.
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
