Paneer on tomato

--- a/main.tex
+++ b/main.tex
@@ -1549,6 +1549,55 @@ Serves 4
 Ideally refrigerate for 1 hour before serving.
 \end{recipe}
 
+\begin{denserecipe}{Thanksgiving Dressing}{\preheat{\fahrenheit{250}}\totaltime{2 h 45 min}}
+\begin{ingredients}
+3/4 cup unsalted butter
+1 lb day-old white bread
+2 1/2 cup chopped onion
+1 1/2 cup sliced celery
+1/2 cup chopped parsley
+2 tbsp minced sage
+1 tbsp minced rosemary
+1 tbsp minced thyme
+2 tsp kosher salt
+1 tsp black pepper
+2 1/2 cup chicken broth
+2 large eggs
+\end{ingredients}
+\nextcolumn
+Serves 8
+\begin{steps}
+    \item Tear bread into 1 inch chunks and bake at \fahrenheit{250} until dry, about 1 hour
+    \item Lightly brown onions and celery in butter
+    \item Toss bread with vegetables, herbs, salt, pepper, and 1 1/4 cups broth
+    \item Combine remaining 1 1/4 cups broth and eggs
+    \item Fold custard into bread and transfer to buttered baking dish
+    \item Bake covered with foil at \fahrenheit{350} for 40 minutes
+    \item Bake uncovered for 40 minutes more, until browned and crisp
+\end{steps}
+\end{denserecipe}
+
+\begin{recipe}{Paneer on Tomato}{\totaltime{15 min}}
+\begin{ingredients}
+2 ripe tomatoes
+salt and pepper
+6-8 oz paneer, cubed
+1+2 tbsp coconut oil
+1/4 tsp black mustard seeds
+1/4 tsp cumin seeds
+1 sprig fresh curry leaves, crumpled
+\end{ingredients}
+\nextcolumn
+Serves 2
+\begin{steps}
+    \item Grate tomatoes onto serving plates and season generously with salt and pepper
+    \item Lightly brown paneer in 1 tbsp oil and pile onto tomato
+    \item Fry mustard and cumin in 2 tbsp oil
+    \item When mustard seeds start popping, add curry leaves and saute gently
+    \item Drizzle oil and spices over paneer
+\end{steps}
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
