Corn salad and baked eggs

--- a/main.tex
+++ b/main.tex
@@ -1598,6 +1598,56 @@ Serves 2
 \end{steps}
 \end{recipe}
 
+\begin{denserecipe}{Spicy Corn Salad}{\totaltime{15 min}}
+\begin{ingredients}
+2+1 tbsp olive oil
+2 tbsp lime juice
+1/4 tsp ground cumin
+3/4 tsp kosher salt
+1/3 cup red onion, diced
+1 clove garlic, minced
+3 cups corn (4 to 6 ears)
+6 oz shishito or bell peppers, sliced
+1 jalapeno, diced
+1/4 cup cotija, grated
+1/4 cup cilantro, chopped
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Whisk 2 tbsp of oil with juice, cumin and salt
+    \item Add red onion and garlic
+    \item Salt peppers and cook over medium heat in 1~tbsp oil until tender
+    \item Combine corn with peppers, dressing, cotija and cilantro
+\end{steps}
+Garnish with more cilantro.
+\end{denserecipe}
+
+\begin{recipe}{Baked Eggs with Smoked Salmon}{\preheat{\fahrenheit{400}}\totaltime{45 min}}
+\begin{ingredients}
+1/2 tbsp butter
+2 tbsp shallot, minced
+1/8 tsp salt
+2 tbsp creme fraiche
+2+2 tbsp heavy cream
+1 tsp dill, chopped
+1/4 tsp lemon zest
+4 large eggs, at room temperature
+black pepper
+50 g smoked salmon
+\end{ingredients}
+\nextcolumn
+Serves 2
+\begin{steps}
+    \item Brush two 8-ounce ramekins with butter
+    \item Saute shallots with salt in butter
+    \item Stir in 2 tbsp cream, creme fraiche, dill and zest, then divide between ramekins
+    \item To each ramekin crack in 2 eggs, float 1 tbsp cream, sprinkle with salt and pepper
+    \item Bake at \fahrenheit{400} until whites are just set, about 12 to 16 minutes
+    \item Top with smoked salmon and more dill
+\end{steps}
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
