--- a/main.tex
+++ b/main.tex
@@ -1648,6 +1648,72 @@ Serves 2
 \end{steps}
 \end{recipe}
 
+\begin{recipe}{Orange and Radish Salad}{\totaltime{15 min}}
+\begin{ingredients}
+1/3 cup lemon juice (about 2 lemons)
+2 tbsp sugar
+1/4 tsp flaky salt
+4 large oranges
+8 red radishes
+orange zest, optional
+\end{ingredients}
+\nextcolumn
+Serves 4 to 6
+\begin{steps}
+    \item Shake together juice, sugar and salt
+    \item Peel oranges, slice into rounds, de-seed
+    \item Cut radishes into matchsticks
+    \item Chill all components thoroughly
+    \item Arrange orange rounds onto dish, top with radish and drizzle with dressing, sprinkle with orange zest
+    \item Finish with tiny pinch of salt
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{French Lentils}{\totaltime{40 min}}
+\begin{ingredients}
+3 tbsp olive oil
+1 onion, finely diced
+2 cloves garlic, minced
+1 carrot, finely diced
+2 1/4 cup Le Puy lentils
+1 tsp thyme
+3 bay leaves
+1 tbsp kosher salt
+\end{ingredients}
+\nextcolumn
+Serves 6
+\begin{steps}
+    \item Saute vegetable until soft
+    \item Add 6 cups water, lentils, thyme, bay leaves and salt
+    \item Bring to boil
+    \item Cook at a fast simmer until lentils are tender, 20 to 25 minutes
+    \item Drain excess water if necessary
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Gullichsenin Letut}{\totaltime{1 h 10 min}}
+\begin{ingredients}
+4 dl flour
+1 tsp baking powder
+1/2 tsp salt
+5 dl milk
+3 eggs
+30 g butter, melted
+250 g soft quark
+1/2–1 dl club soda
+\end{ingredients}
+\nextcolumn
+Serves 6
+\begin{steps}
+    \item Combine flour and baking powder
+    \item Add half of milk and mix well, then rest of milk, eggs, butter and quark
+    \item Let stand for at least 30 minutes
+    \item Add club soda
+    \item Fry in oil and butter
+\end{steps}
+Serve with: manchego and berries/gouda and fig jam/sour cream and lemon curd/ sugar and lemon juice
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
