--- a/main.tex
+++ b/main.tex
@@ -1658,7 +1658,7 @@ Serves 2
 orange zest, optional
 \end{ingredients}
 \nextcolumn
-Serves 4 to 6
+Serves 4
 \begin{steps}
     \item Shake together juice, sugar and salt
     \item Peel oranges, slice into rounds, de-seed
@@ -1712,6 +1712,29 @@ Serves 6
     \item Fry in oil and butter
 \end{steps}
 Serve with: manchego and berries/gouda and fig jam/sour cream and lemon curd/ sugar and lemon juice
+\end{recipe}
+
+\begin{recipe}{Harissa and Hot Brown Butter}{\totaltime{60 min}}
+\begin{ingredients}
+4 cups chicken stock
+1 lb chicken thighs or lamb stew meat, de-skinned and boned
+1 1/2 cups pearl farro, korkot or barley
+1 tsp kosher salt
+6 tbsp butter
+4 tbsp olive oil
+2 tbsp aleppo pepper
+lavash, for serving
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Cut meat into 1-inch cubes
+    \item Cook 1 cup water, broth, meat, farro and salt in a pressure cooker at high pressure for 40 minutes + a natural release
+    \item Mash until chicken is mostly shredded and harissa is very thick, about 2 minutes
+    \item Check for salt
+    \item Deeply brown butter and oil in saucepan
+    \item Mix in pepper and serve with harissa
+\end{steps}
 \end{recipe}
 
 % ===========================
