--- a/main.tex
+++ b/main.tex
@@ -1737,6 +1737,35 @@ Serves 4
 \end{steps}
 \end{recipe}
 
+\begin{denserecipe}{Spiced Fruit Torte}{\preheat{\fahrenheit{350}}\totaltime{1 h 15 min}}
+\begin{ingredients}
+1/2 cup salted butter
+3/4 to 1 cup sugar
+1 cup flour
+1 tsp baking powder
+1 to 2 tsp spices
+2 eggs
+1 to 1.5 lb juicy fruit
+sugar and lemon juice
+\end{ingredients}
+\nextcolumn
+Serves 8
+\begin{steps}
+    \item Cream soft butter with sugar
+    \item Beat in flour, baking powder, spices, eggs
+    \item Spoon batter into 8--10 inch springform pan
+    \item Place fruit on top, possible skin side up
+    \item Sprinkle with sugar and lemon juice to taste
+    \item Bake at \fahrenheit{350} until light golden, about 1 hour
+\end{steps}
+\begin{description}
+    \item[Original:] purple plums, cinnamon
+    \item[Holiday:] poached pears, cardamom, citrus zest
+    \item[Italian:] peaches, almond extract, 33\% cornmeal
+    \item[Forest:] raspberries, thyme, 33\% almond meal
+\end{description}
+\end{denserecipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
