--- a/main.tex
+++ b/main.tex
@@ -1766,6 +1766,22 @@ Serves 8
 \end{description}
 \end{denserecipe}
 
+\begin{recipe}{Natasha}{\totaltime{5 min}}
+\begin{ingredients}
+3 cl raspberry infused seabuckthorn liquour
+2 cl mezcal
+2 cl lemon juice
+2 cl pink peppercorn simple syrup
+\end{ingredients}
+\nextcolumn
+Serves 1
+\begin{steps}
+    \item Rim a glass with fine sugar
+    \item Shake all ingredients with ice
+    \item Strain into glass
+\end{steps}
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
