--- a/main.tex
+++ b/main.tex
@@ -1782,6 +1782,32 @@ Serves 1
 \end{steps}
 \end{recipe}
 
+\begin{recipe}{Creamed Spinach}{\totaltime{2 h}}
+\begin{ingredients}
+3 tbsp butter
+2 shallots, minced
+2 cloves garlic, minced
+2 lb curly spinach
+1 tbsp flour
+1 1/2 cups heavy cream
+1/2 cup whole milk
+1/4 tsp nutmeg
+1/4 cup creme fraiche
+salt and pepper
+(1 cup parmesan)
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Saute shallots and garlic until softened, wilt in spinach
+    \item Add flour and cook until incorporated, stir in heavy cream and milk
+    \item Cook at a bare simmer, stirring occasionally, until soft, about 1 1/2 hours
+    \item Stir in nutmeg and creme fraiche
+    \item Season with salt and pepper
+    \item Optionally, broil on parmesan until browned
+\end{steps}
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
