--- a/main.tex
+++ b/main.tex
@@ -1752,7 +1752,7 @@ sugar and lemon juice
 Serves 8
 \begin{steps}
     \item Cream soft butter with sugar
-    \item Beat in flour, baking powder, spices, eggs
+    \item Beat in eggs, then flour, baking powder, spices
     \item Spoon batter into 8--10 inch springform pan
     \item Place fruit on top, possible skin side up
     \item Sprinkle with sugar and lemon juice to taste
