Savory tart and steak

--- a/main.tex
+++ b/main.tex
@@ -1808,6 +1808,64 @@ Serves 4
 \end{steps}
 \end{recipe}
 
+\begin{recipe}{Caramelized Onion, Gruyere, Tomato Tart}{\preheat{\fahrenheit{350}}\totaltime{1 h}}
+\begin{ingredients}
+1 vodka pie dough
+2 lb onions, caramelized
+110 g gruyere, grated
+450 g cherry tomatoes
+\end{ingredients}
+\nextcolumn
+Serves 6 to 8
+\begin{steps}
+    \item Fill 11 inch tart pan with dough and chill for 30 minutes
+    \item Blind bake at \fahrenheit{350} for 40 minutes
+    \item Mix tomatoes with 1 tbsp caramelized onion juices and pinch of salt
+    \item Fill slightly cooled tart with onions, cheese and tomatoes, in that order
+    \item Bake at \fahrenheit{375} until golden brown, about 30-40 minutes
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Vodka Pie Dough}{\totaltime{1 h}}
+\begin{ingredients}
+2 1/2 cups  flour
+1 tsp table salt
+2 tbsp sugar
+12 tbsp cold butter, diced
+1/2 cup cold lard, in chunks
+1/4 cup cold vodka
+1/4 cup cold water
+\end{ingredients}
+\nextcolumn
+Fills two 11-inch tart pans
+\begin{steps}
+    \item Mix 1 1/2 cups flour, salt and sugar in food processor
+    \item Add fats and process until homogenous and starting to clump
+    \item Scrape sides, add remaining flour and pulse 4 to 6 quick times
+    \item Sprinkle on vodka and water, fold together with spatula
+    \item Refrigerate for 45 minutes
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Reverse Seared Steak}{\preheat{\fahrenheit{250}}\totaltime{50 min}}
+\begin{ingredients}
+1 thick steak
+salt and pepper
+oil
+1 tbsp butter
+\end{ingredients}
+\nextcolumn
+Serves 1
+\begin{steps}
+    \item Season generously with salt and pepper
+    \item Cook in \fahrenheit{250} (\celsius{120}) oven until appropriate temperature (see below)
+    \item Set skillet to heat on high heat and put a plate in the oven
+    \item Brown steak up to 90 seconds per side
+    \item Rest on warm plate for 10 to 15 minutes
+\end{steps}
+Temperature out of oven: \celsius{35} for 1.25", \celsius{38} for 1.5", \celsius{42} for 1.75", \celsius{45} for 2"
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
