--- a/main.tex
+++ b/main.tex
@@ -1866,6 +1866,29 @@ Serves 1
 Temperature out of oven: \celsius{35} for 1.25", \celsius{38} for 1.5", \celsius{42} for 1.75", \celsius{45} for 2"
 \end{recipe}
 
+\begin{recipe}{Sabudana Khichdi}{\totaltime{4 h 15 min}}
+\begin{ingredients}
+1 cup tapioca pearls, rinsed (sabudana)
+1/4 cup peanuts
+2 tbsp ghee
+1/2 tsp kosher salt
+1/2 tsp cumin seeds
+1 sprig curry leaves
+1 to 2 hot green chilies
+2 tbsp cilantro, chopped
+1 tbsp lemon juice
+\end{ingredients}
+\nextcolumn
+Serves 2
+\begin{steps}
+    \item Soak tapioca in enough water to cover until soft, 4 hours to preferably overnight
+    \item Dry roast and chop peanuts
+    \item Saute spices in ghee for a few minutes
+    \item Add drained sabudana and saute on high until translucent, about 3 minutes
+    \item Mix in lemon juice, cilantro and peanuts
+\end{steps}
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
