Recipes and fixes

--- a/main.tex
+++ b/main.tex
@@ -1182,7 +1182,7 @@ Serves 6
 Serve with sliced chives or scallions.
 \end{recipe}
 
-\begin{recipe}{Green Goddess Dressing}{\tag{V}\totaltime{15 min}}
+\begin{recipe}{Green Goddess Dressing}{\totaltime{15 min}}
 \begin{ingredients}
 1 cup parsley
 1 cup spinach
@@ -1241,7 +1241,7 @@ Replace fish sauce with 2 anchovy fillets.
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}{Saaristolaisleipä}{\preheat{\celsius{175}}\totaltime{3h 30 min}}
+\begin{recipe}{Saaristolaisleipä}{\tag{V}\preheat{\celsius{175}}\totaltime{3h 30 min}}
 \begin{ingredients}
 3 tsp instant yeast
 1 1/2 dl beer malts
@@ -1349,7 +1349,7 @@ Yields 3 cups
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Mediterranean Roast Cauliflower}{\preheat{\fahrenheit{500}}\totaltime{40 min}}
+\begin{recipe}{Mediterranean Roast Cauliflower}{\tag{V}\preheat{\fahrenheit{500}}\totaltime{40 min}}
 \begin{ingredients}
 1 cauliflower
 3+3 tbsp olive oil
@@ -1529,7 +1529,7 @@ Serves 4
 Serve over rice drizzled with Soy Reduction
 \end{recipe}
 
-\begin{recipe}{Carrot Salad}{\totaltime{15 min}}
+\begin{recipe}{Carrot Salad}{\tag{V}\totaltime{15 min}}
 \begin{ingredients}
 1 cup pineapple or orange pieces
 1/2 cup golden raisins
@@ -1577,7 +1577,7 @@ Serves 8
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}{Paneer on Tomato}{\totaltime{15 min}}
+\begin{recipe}{Paneer on Tomato}{\tag{V}\totaltime{15 min}}
 \begin{ingredients}
 2 ripe tomatoes
 salt and pepper
@@ -1598,7 +1598,7 @@ Serves 2
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Spicy Corn Salad}{\totaltime{15 min}}
+\begin{denserecipe}{Spicy Corn Salad}{\tag{V}\totaltime{15 min}}
 \begin{ingredients}
 2+1 tbsp olive oil
 2 tbsp lime juice
@@ -1648,7 +1648,7 @@ Serves 2
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Orange and Radish Salad}{\totaltime{15 min}}
+\begin{recipe}{Orange and Radish Salad}{\tag{VG}\totaltime{15 min}}
 \begin{ingredients}
 1/3 cup lemon juice (about 2 lemons)
 2 tbsp sugar
@@ -1669,7 +1669,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{French Lentils}{\totaltime{40 min}}
+\begin{recipe}{French Lentils}{\tag{VG}\totaltime{40 min}}
 \begin{ingredients}
 3 tbsp olive oil
 1 onion, finely diced
@@ -1691,7 +1691,7 @@ Serves 6
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Gullichsenin Letut}{\totaltime{1 h 10 min}}
+\begin{recipe}{Gullichsenin Letut}{\tag{V}\totaltime{1 h 10 min}}
 \begin{ingredients}
 4 dl flour
 1 tsp baking powder
@@ -1737,7 +1737,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Spiced Fruit Torte}{\preheat{\fahrenheit{350}}\totaltime{1 h 15 min}}
+\begin{denserecipe}{Spiced Fruit Torte}{\tag{V}\preheat{\fahrenheit{350}}\totaltime{1 h 15 min}}
 \begin{ingredients}
 1/2 cup salted butter
 3/4 to 1 cup sugar
@@ -1782,7 +1782,7 @@ Serves 1
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Creamed Spinach}{\totaltime{2 h}}
+\begin{recipe}{Creamed Spinach}{\tag{V}\totaltime{2 h}}
 \begin{ingredients}
 3 tbsp butter
 2 shallots, minced
@@ -1866,7 +1866,7 @@ Serves 1
 Temperature out of oven: \celsius{35} for 1.25", \celsius{38} for 1.5", \celsius{42} for 1.75", \celsius{45} for 2"
 \end{recipe}
 
-\begin{recipe}{Sabudana Khichdi}{\totaltime{4 h 15 min}}
+\begin{recipe}{Sabudana Khichdi}{\tag{V}\totaltime{4 h 15 min}}
 \begin{ingredients}
 1 cup tapioca pearls, rinsed (sabudana)
 1/4 cup peanuts
@@ -1889,12 +1889,82 @@ Serves 2
 \end{steps}
 \end{recipe}
 
+\begin{recipe}{Egg Salad for Tea Sandwiches}{\tag{V}\totaltime{15 min}}
+\begin{ingredients}
+2 hard boiled eggs
+1 tbsp mayonnaise
+1 tbsp yoghurt
+1 tbsp Dijon mustard
+1 tsp dill, minced
+1 tsp parsley, minced
+pinch of sugar
+salt and pepper
+\end{ingredients}
+\nextcolumn
+Serves 2
+\begin{steps}
+    \item Mash together eggs, mayonnaise, yoghurt and mustard
+    \item Mix in dill and parsley
+    \item Season with sugar, salt and pepper
+\end{steps}
+\end{recipe}
+
+\begin{denserecipe}{Choux Pastry}{\tag{V}\preheat{\fahrenheit{400}}\totaltime{20 min}}
+\begin{ingredients}
+1 cup (235 g) water or milk
+6 tbsp (85 g) unsalted butter, diced
+2 tsp sugar, optional
+1/2 tsp kosher salt
+130 g flour
+4 large eggs (200 g)
+\end{ingredients}
+\nextcolumn
+Makes 18 puffs
+\begin{steps}
+    \item Bring water, butter, sugar to boil on high heat
+    \item Mix in flour off heat
+    \item Cook on medium-high until \celsius{80}
+    \item Beat with paddle in stand mixer until \celsius{60}
+    \item Beat in eggs one at a time
+    \item Pipe and coat with cooking spray
+    \item Bake at \fahrenheit{400} until golden, about 25 minutes
+    \item Dry in cooling, cracked oven for 30 minutes
+\end{steps}
+Can wait for 2 hours in piping bag before baking.
+\end{denserecipe}
+
+\begin{denserecipe}{Egg and Tomato}{\tag{V}\totaltime{15 min}}
+\begin{ingredients}
+4 eggs
+1/2 tsp kosher salt
+seasonings, such as sugar, white pepper, sesame oil, cooking wine, fish sauce
+1/2 tsp cornstarch
+1 tbsp ketchup
+2+1 tbsp oil
+1 scallion, sliced
+2-4 tomatoes, chopped
+\end{ingredients}
+\nextcolumn
+Serves 2
+\begin{steps}
+    \item Beat together eggs, salt and seasonings
+    \item Combine 1 tbsp water, cornstarch and ketchup
+    \item Heat 2 tbsp oil over medium-high heat
+    \item Fry scallions until aromatic
+    \item Add eggs and scramble until just set
+    \item Remove eggs from pan
+    \item Cook tomatoes in 1 tbsp oil until saucy
+    \item Add slurry and cook until thickened
+    \item Stir in eggs
+\end{steps}
+\end{denserecipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
 \iffalse
 
-\begin{recipe}{}{\totaltime{}}
+\begin{recipe}{}{\tag{}\preheat{}\totaltime{}}
 \begin{ingredients}
 \end{ingredients}
 \nextcolumn
