--- a/main.tex
+++ b/main.tex
@@ -1938,6 +1938,7 @@ Can wait for 2 hours in piping bag before baking.
 4 eggs
 1/2 tsp kosher salt
 seasonings, such as sugar, white pepper, sesame oil, cooking wine, fish sauce
+1 tbsp water
 1/2 tsp cornstarch
 1 tbsp ketchup
 2+1 tbsp oil
@@ -1958,6 +1959,27 @@ Serves 2
     \item Stir in eggs
 \end{steps}
 \end{denserecipe}
+
+\begin{recipe}{Reliable Carbonara}{\totaltime{30 min}}
+\begin{ingredients}
+2 eggs + 2 yolks
+1/2 cup grated parmesan and pecorino
+1/2 tsp black pepper
+1/4 cup diced guanciale or bacon
+2 tbsp olive oil
+1/2 lb pasta
+\end{ingredients}
+\nextcolumn
+Serves 2
+\begin{steps}
+    \item Mix eggs, cheeses, pepper in a metal bowl
+    \item Fry guanciale in oil over medium heat until crisp, then leave in pan with heat off
+    \item Meanwhile, cook pasta in salted water
+    \item Lift out pasta into pan with guanciale
+    \item Mix and scrape contents of pan into metal bowl and add 1/4 cup cooking water
+    \item Cook in bowl over but not touching boiling water, stirring quickly until thickened
+\end{steps}
+\end{recipe}
 
 % ===========================
 % === New recipe template ===
