--- a/main.tex
+++ b/main.tex
@@ -1981,6 +1981,31 @@ Serves 2
 \end{steps}
 \end{recipe}
 
+\begin{recipe}{Toll House Chocolate Chip Cookies}{\tag{V}\preheat{375}\totaltime{30 min}}
+\begin{ingredients}
+1 cup + 2 tbsp flour
+1/2 tsp baking soda
+1 stick salted butter, softened
+1/4 cup brown sugar
+1/2 cup sugar
+1/2 tsp vanilla extract
+1 egg
+1 cup chocolate chips
+1/2 cup chopped nuts, optional
+\end{ingredients}
+\nextcolumn
+Makes 30 cookies
+\begin{steps}
+    \item Mix flour with baking soda
+    \item Cream butter, sugars and vanilla
+    \item Beat in egg
+    \item Mix in flour mixture
+    \item Fold in chocolate chips and nuts, if using
+    \item Portion into 1 1/2 tbsp mounds
+    \item Bake at \fahrenheit{375} until golden brown, about 9 to 11 minutes
+\end{steps}
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
