--- a/main.tex
+++ b/main.tex
@@ -1981,7 +1981,7 @@ Serves 2
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Toll House Chocolate Chip Cookies}{\tag{V}\preheat{375}\totaltime{30 min}}
+\begin{recipe}{Toll House Chocolate Chip Cookies}{\tag{V}\preheat{\fahrenheit{375}}\totaltime{30 min}}
 \begin{ingredients}
 1 cup + 2 tbsp flour
 1/2 tsp baking soda
