Tortilla pizza and retire toll house cookies

--- a/main.tex
+++ b/main.tex
@@ -1981,6 +1981,47 @@ Serves 2
 \end{steps}
 \end{recipe}
 
+\begin{recipe}{Convection Tortilla Pizza}{\preheat{\fahrenheit{400}}\totaltime{15 min}}
+\begin{ingredients}
+1 flour tortilla
+4 tbsp pizza sauce
+3 tbsp grated mozzarella
+2 tbsp grated parmesan
+toppings, such as ham, basil, cooked sausage, pepperoni, onion, banana peppers, sun-dried tomatoes, olives
+\end{ingredients}
+\nextcolumn
+Serves 1
+\begin{steps}
+    \item Line a baking sheet with foil
+    \item Spray foil with oil
+    \item Lay tortilla on sheet
+    \item Spread on pizza sauce
+    \item Sprinkle on cheeses
+    \item Add toppings
+    \item Bake with convection at \fahrenheit{400} for 7 minutes, until well browned and crispy
+\end{steps}
+\end{recipe}
+
+% ===========================
+% === New recipe template ===
+% ===========================
+\iffalse
+
+\begin{recipe}{}{\tag{}\preheat{}\totaltime{}}
+\begin{ingredients}
+\end{ingredients}
+\nextcolumn
+Serves
+\begin{steps}
+    \item
+\end{steps}
+\end{recipe}
+
+% =======================
+% === Retired recipes ===
+% =======================
+
+% This was too sweet
 \begin{recipe}{Toll House Chocolate Chip Cookies}{\tag{V}\preheat{\fahrenheit{375}}\totaltime{30 min}}
 \begin{ingredients}
 1 cup + 2 tbsp flour
@@ -2003,21 +2044,6 @@ Makes 30 cookies
     \item Fold in chocolate chips and nuts, if using
     \item Portion into 1 1/2 tbsp mounds
     \item Bake at \fahrenheit{375} until golden brown, about 9 to 11 minutes
-\end{steps}
-\end{recipe}
-
-% ===========================
-% === New recipe template ===
-% ===========================
-\iffalse
-
-\begin{recipe}{}{\tag{}\preheat{}\totaltime{}}
-\begin{ingredients}
-\end{ingredients}
-\nextcolumn
-Serves
-\begin{steps}
-    \item
 \end{steps}
 \end{recipe}
 
