--- a/main.tex
+++ b/main.tex
@@ -1998,7 +1998,7 @@ Serves 1
     \item Spread on pizza sauce
     \item Sprinkle on cheeses
     \item Add toppings
-    \item Bake with convection at \fahrenheit{400} for 7 minutes, until well browned and crispy
+    \item Bake with convection at \fahrenheit{400} until well browned and crispy, about 7 minutes
 \end{steps}
 \end{recipe}
 
