Fix and potato salads

--- a/main.tex
+++ b/main.tex
@@ -1998,9 +1998,56 @@ Serves 1
     \item Spread on pizza sauce
     \item Sprinkle on cheeses
     \item Add toppings
-    \item Bake with convection at \fahrenheit{400} until well browned and crispy, about 7 minutes
+    \item Bake with convection at \fahrenheit{400} until well browned and crispy, about 9 minutes
 \end{steps}
 \end{recipe}
+
+\begin{densecard}{Potato Salads}{\totaltime{40 min}}
+\begin{densesteps}
+    \item Bring to boil 1 1/2 lb cut up potatoes, 1 tbsp salt, 1/2 tbsp vinegar and 3 cups tepid water in saucepan and cook until fully tender, about 17 minutes
+    \item Drain and toss with 1 tbsp vinegar; spread out and cool for 10 minutes
+    \item Toss potatoes with dressing and season with salt and pepper to taste
+\end{densesteps}
+\columnratio{0.333}
+\newcommand{\lpshead}[1]{\ihead{#1}\vspace{-0.25em}}
+\begin{paracol}{3}
+\lpshead{Lighter Scandinavian}
+
+\begin{ingredients}
+1/2 tbsp vinegar
+1 tbsp grain mustard
+2 tbsp sour cream
+2 tsp olive oil
+1 red onion, diced
+2 scallions, sliced
+2 tbsp minced dill
+\end{ingredients}
+\nextcolumn
+\lpshead{Spicy Kimchi}
+
+\begin{ingredients}
+1/4 cup mayonnaise
+1/4 cup yoghurt
+2 tbsp sliced scallions
+2 tbsp chopped kimchi
+1 tbsp ketchup
+2 tsp lime juice
+1 tsp sriracha
+\end{ingredients}
+\nextcolumn
+\lpshead{Vegan Tahini}
+
+\begin{ingredients}
+1/3 cup olive oil
+1 tbsp lemon juice
+1/4 cup sliced scallions
+2 cloves garlic, crushed
+1 tsp ground cumin
+1/4 cup tahini
+1/2 cup soft herbs
+\end{ingredients}
+\end{paracol}
+\end{densecard}
 
 % ===========================
 % === New recipe template ===
